--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,110 +4,104 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #1E90FF
+// Note: Color palettes are generated from primary: #6c66bd, secondary: #8b53b3, tertiary: #306bad, neutral: #50507c, neutral variant: #bea2d5
 $_palettes: (
-   primary: (
-    0: #000000,
-    10: #001c3a,
-    20: #00315f,
-    25: #003c72,
-    30: #004786,
-    35: #00539a,
-    40: #005faf,
-    50: #0078da,
-    60: #2792ff,
-    70: #72adff,
-    80: #a5c8ff,
-    90: #d4e3ff,
-    95: #ebf1ff,
-    98: #f9f9ff,
-    99: #fdfcff,
-    100: #ffffff,
-  ),
-  secondary: (
-    0: #000000,
-    10: #001c3a,
-    20: #0c3159,
-    25: #1b3c65,
-    30: #284871,
-    35: #35537e,
-    40: #415f8a,
-    50: #5a78a5,
-    60: #7492c0,
-    70: #8faddc,
-    80: #aac8f9,
-    90: #d4e3ff,
-    95: #ebf1ff,
-    98: #f9f9ff,
-    99: #fdfcff,
-    100: #ffffff,
-  ),
-  tertiary: (
-    0: #000000,
-    10: #330045,
-    20: #53006f,
-    25: #640184,
-    30: #711891,
-    35: #7f299e,
-    40: #8c37ab,
-    50: #a852c6,
-    60: #c46ce2,
-    70: #e187ff,
-    80: #eeb0ff,
-    90: #fad7ff,
-    95: #ffebff,
-    98: #fff7fb,
+  primary: (0: #000000,
+    10: #140364,
+    20: #2a2278,
+    25: #362e83,
+    30: #413b8f,
+    35: #4d479c,
+    40: #5953a9,
+    50: #726cc4,
+    60: #8c86e0,
+    70: #a7a1fd,
+    80: #c5c0ff,
+    90: #e3dfff,
+    95: #f3eeff,
+    98: #fcf8ff,
     99: #fffbff,
     100: #ffffff,
   ),
-  neutral: (
-    0: #000000,
-    10: #181c22,
-    20: #2d3138,
-    25: #383b43,
-    30: #43474e,
-    35: #4f525a,
-    40: #5b5e66,
-    50: #74777f,
-    60: #8d9199,
-    70: #a8abb4,
-    80: #c3c6d0,
-    90: #e0e2ec,
-    95: #eef0fa,
-    98: #f9f9ff,
-    99: #fdfcff,
+  secondary: (0: #000000,
+    10: #2f004d,
+    20: #4a0e72,
+    25: #561e7e,
+    30: #632b8a,
+    35: #6f3897,
+    40: #7c45a4,
+    50: #975ebf,
+    60: #b278db,
+    70: #cf93f8,
+    80: #e2b5ff,
+    90: #f3daff,
+    95: #fbecff,
+    98: #fff7fd,
+    99: #fffbff,
     100: #ffffff,
-    4: #0a0e15,
-    6: #10141a,
-    12: #1c2027,
-    17: #262a31,
-    22: #31353c,
-    24: #353941,
-    87: #d7dae3,
-    92: #e5e8f1,
-    94: #ebeef7,
-    96: #f1f3fd,
   ),
-  neutral-variant: (
-    0: #000000,
-    10: #151c27,
-    20: #2a313c,
-    25: #353c48,
-    30: #404753,
-    35: #4c535f,
-    40: #585f6b,
-    50: #707785,
-    60: #8a919f,
-    70: #a5abba,
-    80: #c0c7d6,
-    90: #dce3f2,
+  tertiary: (0: #000000,
+    10: #001c39,
+    20: #00315c,
+    25: #003c6f,
+    30: #004883,
+    35: #0a5494,
+    40: #2160a1,
+    50: #4179bc,
+    60: #5d93d8,
+    70: #78aef4,
+    80: #a3c9ff,
+    90: #d3e3ff,
     95: #ebf1ff,
-    98: #f9f9ff,
+    98: #f8f9ff,
     99: #fdfcff,
     100: #ffffff,
   ),
-  error: (
-    0: #000000,
+  neutral: (0: #000000,
+    10: #201923,
+    20: #362e39,
+    25: #413944,
+    30: #4d444f,
+    35: #584f5b,
+    40: #655b67,
+    50: #7e7480,
+    60: #988d9a,
+    70: #b3a7b5,
+    80: #cfc2d1,
+    90: #ecdeed,
+    95: #faecfb,
+    98: #fff7fc,
+    99: #fffbff,
+    100: #ffffff,
+    4: #120c15,
+    6: #18111b,
+    12: #241d27,
+    17: #2f2732,
+    22: #3a323d,
+    24: #3f3642,
+    87: #e3d6e4,
+    92: #f2e4f3,
+    94: #f7eaf8,
+    96: #fdeffe,
+  ),
+  neutral-variant: (0: #000000,
+    10: #26113b,
+    20: #3c2751,
+    25: #48325d,
+    30: #543d69,
+    35: #604975,
+    40: #6d5482,
+    50: #866d9c,
+    60: #a186b7,
+    70: #bca0d3,
+    80: #d9bbf0,
+    90: #f0dbff,
+    95: #faecff,
+    98: #fff7fe,
+    99: #fffbff,
+    100: #ffffff,
+  ),
+  error: (0: #000000,
     10: #410002,
     20: #690005,
     25: #7e0007,
