--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,30 +1,42 @@
-<h1></h1>
+<!-- Display parent events in thread (if any) -->
+@if (parentEvents().length > 0) {
+<div class="parent-events">
+  <h3>Thread Context</h3>
+  @for (parentEvent of parentEvents(); track parentEvent.id) {
+  <div class="parent-event">
+    <app-event [event]="parentEvent" appearance="plain"></app-event>
+  </div>
+  }
+  <div class="thread-indicator">
+    <hr>
+    <span>Reply below</span>
+    <hr>
+  </div>
+</div>
+}
 
+<!-- Main event -->
 <app-event [event]="event()" appearance="plain"></app-event>
 
 <div class="reactions">
   @for (reaction of reactions(); track reaction.emoji) {
-    <div class="reaction">
-      <span class="emoji">{{ reaction.emoji }}</span>
-      <span class="count">{{ reaction.count }}</span>
-    </div>
+  <div class="reaction">
+    <span class="emoji">{{ reaction.emoji }}</span>
+    <span class="count">{{ reaction.count }}</span>
+  </div>
   }
 </div>
 
-<!-- <app-note-editor-dialog></app-note-editor-dialog> -->
-
 @if (error()) {
-  <div class="warn">
-    {{ error() }}
-  </div>
+<div class="warn">
+  {{ error() }}
+</div>
 }
 
 <div class="replies-section">
   @for (threadedEvent of threadedReplies(); track threadedEvent.event.id) {
-    <ng-container
-      [ngTemplateOutlet]="replyTemplate"
-      [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"
-    ></ng-container>
+  <ng-container [ngTemplateOutlet]="replyTemplate"
+    [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"></ng-container>
   }
 </div>
 
@@ -33,26 +45,17 @@
     <app-event [event]="threadedEvent.event"></app-event>
 
     @for (childReply of threadedEvent.replies; track childReply.event.id) {
-      <ng-container
-        [ngTemplateOutlet]="replyTemplate"
-        [ngTemplateOutletContext]="{ threadedEvent: childReply }"
-      ></ng-container>
+    <ng-container [ngTemplateOutlet]="replyTemplate"
+      [ngTemplateOutletContext]="{ threadedEvent: childReply }"></ng-container>
     }
 
     @if (threadedEvent.hasMoreReplies && threadedEvent.deepestReplyId) {
-      <div
-        class="view-more-replies"
-        [style.margin-left.px]="(threadedEvent.level + 1) * 24"
-      >
-        <button
-          mat-stroked-button
-          class="view-more-button"
-          (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)"
-        >
-          <mat-icon>expand_more</mat-icon>
-          View more replies
-        </button>
-      </div>
+    <div class="view-more-replies" [style.margin-left.px]="(threadedEvent.level + 1) * 24">
+      <button mat-stroked-button class="view-more-button" (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)">
+        <mat-icon>expand_more</mat-icon>
+        View more replies
+      </button>
+    </div>
     }
   </div>
 </ng-template>
