--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -35,7 +35,7 @@
     }
 
     <!-- Avatar section - single image element -->
-    <a [routerLink]="['/p', publicKey]" class="user-profile-avatar"
+    <a [routerLink]="['/p', npubValue()]" class="user-profile-avatar"
       [class.has-custom-tooltip]="view() === 'large' || view() === 'medium' || view() === 'small'"
       [attr.data-tooltip]="getTooltipContent()" (touchstart)="showTooltipOnTouch($event)">
 
